css/onboarding.css
@media (max-width: 1240px ) {
	.faithmade_modal,
	.faithmade_modal-backdrop {
		display: none !important;
	}
}

.faithmade_modal * {
	box-sizing: border-box;
}

.faithmade_modal-fixed-container {
	position: fixed;
	top: 20px;
	right: 50px;
	left: 50px;
	z-index: 160000;
}

.faithmade_modal-wrap {
	position: relative;
	width: 100%;
	margin: 0 auto;
	font-family: 'Open Sans', sans-serif;
	font-size: 14px;
	max-height: 95vh;
}

.aspect-3-2 {
	padding-bottom: 56.25%;
}

.faithmade_modal {
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
	padding: 20px;
	overflow: hidden;
}

.faithmade_modal .faithmade_modal-close {
	position: absolute;
	text-decoration: none;
	top: 30px;
	right: 30px;
	width: 30px;
	height: 30px;
	z-index: 1000;
	-webkit-transition: color .1s ease-in-out, background .1s ease-in-out;
	transition: color .1s ease-in-out, background .1s ease-in-out;
	color: #444 ;
}
.faithmade_modal .faithmade_modal-close:hover ,
.faithmade_modal .faithmade_modal-close:focus {
	color: #2ea2cc ;
}

.faithmade_modal-nav-wrap{
	background: #fff;
	height: 15%;
	border-bottom: 2px solid #ddd;
	clear: both;
	overflow: hidden;
	margin: 0px;
	display: flex;
}

.faithmade_modal-nav-wrap nav {
	display: flex;
	width: 100%;
}

.faithmade_modal-nav {
	padding: 0px;
	width: 100%;
	list-style: none;
	display: flex;
}

.faithmade_modal-nav>li {
	display: flex;
	align-items: center;
	float: left;
	text-align: center;
	font-size: 14px;
	color: #6e768f;
	text-transform: uppercase;
	margin: auto;
	padding: 20px;
	cursor: pointer;
}

.faithmade_modal-nav>li.active {
	font-weight: 700;
	color: #37b094;
}

.step-number {
    border-radius: 50%;
   /* behavior: url(PIE.htc);  remove if you don't care about IE8 */
    width: 30px;
    height: 30px;
    padding: 3px;
    background: #fff;
    border: 2px solid #6e768f;    
    text-align: center;   
   	display: inline-block;
   	margin-right: 6px;
}

.active .step-number {
	border-color: #37b094;
}

.faithmade_modal .faithmade_modal-content {
	background: #fff;
	height: 85%;
	display: flex;
	width: 100%;
}
.faithmade_modal-backdrop {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	min-height: 360px;
	background: #000;
	opacity: .7;
	z-index: 159900;
}

.faithmade_modal-main {
	display: flex;
	flex-direction: column;
	width:100%;
}

.faithmade_modal-main header {
	background: #fff;
	border-bottom: 2px solid #ddd;
	padding: 25px 40px;
	display: flex;
	align-items: center;
}
.faithmade_modal-main h1 {
	font-size: 22px;
	font-weight: 200;
	line-height: 45px;
	margin-bottom: 10px;
	color: #292929;
}
.faithmade_modal-main footer {
	position: absolute;
	left: 0;
	right: 0;
	bottom: 0;
	height: 30px;
	z-index: 100;
	padding: 10px 0px;
	border: 0 solid #dfdfdf;
	border-width: 1px 0 0 0;
	box-shadow: 0 -4px 4px -4px rgba(0,0,0,0.1);
}
.faithmade_modal-main footer .inner {
	padding: 0 16px;
}
.text-right {
	text-align: right;
}
.ir {
	background-color: transparent;
	border: 0;
	overflow: hidden;
	/* IE 6/7 fallback */
	*text-indent: -9999px;
}

.ir:before {
	content: "";
	display: block;
	width: 0;
	height: 150%;
}

.step-title {
	flex: 1;
}

.step-name {
	text-transform: uppercase;
	font-weight: bold;
	font-size: 28px;
	margin-bottom: 20px;
	color: #333333;
}

.step-description {
	color: #333333;
	font-size: 16px;
}

.step-progress {
	text-align: center;
}

.step-count {
	margin-bottom: 10px;
}

video {
	flex: 1;
	background: #292929;
}

button,
input[type="button"] {
	background: #37b094;
	color: #fff;
	border: 0;
	cursor: pointer;
	padding: 20px 30px;
	text-transform: uppercase;
	font-weight: bold;
	border-radius: 4px;
}

button.skip,
input[type="button"].skip {
	background: #ccc;
	color: #fff;
	border: 0;
	cursor: pointer;
	padding: 20px 30px;
	text-transform: uppercase;
	font-weight: bold;
	border-radius: 4px;
}

section {
	display: none;
	padding: 30px;
	flex: 1;
	overflow: scroll;
	background: #f2f2f2;
}

section.active {
	display: flex;
}

section.onboarding-colors {
	flex-direction: column;
}

section.onboarding-fonts {
	padding: 0;
	flex-direction: column;
}

.onboarding-logo {
	border: 20px solid #292929;;
	text-align: center;
	justify-content: center;
	flex-direction: column;
}

.onboarding-logo--title {
	text-transform: uppercase;
	font-weight: bold;
	font-size: 28px;
	margin-bottom: 10px;
	color: #6e768f;
}

.onboarding-logo--description {
	color: #666;
	font-size: 20px;
	margin-bottom: 20px;
	color: #6e768f;
}

.onboarding-logo--file {
	width: 240px;
	margin: 0 auto;
	background: #fff;
	padding: 20px;
	border-radius: 4px;
}

.filelist {
	margin-top: 30px;
}

.plupload-upload-uic label{
	display: block;
	margin-top: 15px;
}

.plupload-thumbs .thumb,
.site-logo-link {
	width: 150px;
	height: 150px;
	display: block;
	margin: 0 auto;
}
.plupload-thumbs .thumb img,
.site-logo-link img {
	border-radius: 4px;
	margin-bottom: 30px;
	max-width: 100%;
	height: auto;
}

.plupload-thumbs .thumb a {
	margin-top: 30px;
	background: #37b094;
	color: #fff;
	border: 0;
	cursor: pointer;
	padding: 20px 30px;
	text-transform: uppercase;
	font-weight: bold;
	border-radius: 4px;
	text-decoration: none;
}

.onboarding-colors--color {
	display: flex;
	width: 100%;
	background: #fff;
	border: 4px solid #ddd;
	border-radius: 8px;
	padding: 4px;
	min-height: 112px;
	margin-bottom: 30px;
}

.onboarding-colors--color_active {
	border-color: #3498db;
}

.onboarding-colors--color-bar {
	text-align: center;
	padding: 20px;
}

.onboarding-colors--color-bar_alt {
	flex: 1;
}

.onboarding-colors--color-bar_primary {
	flex: 10;
}

.onboarding-colors--color-bar_secondary,
.onboarding-colors--color-bar_tertiary {
	flex: 3;
}

.onboarding-colors--color-bar button {
	width: 100%;
	margin: 0;
	color: #333;
	background: #eee;
	box-shadow: 0 0 0 4px rgba(0,0,0,.2);
	white-space: nowrap;
}

.onboarding-fonts--header {
	padding: 10px 60px;
	border-bottom: 2px solid #ddd;
	text-transform: uppercase;
	display: flex;
	background: #fff;
}

.onboarding-fonts--header--headings {
	flex: 1;
	color: #333333;
	font-size: 16px;
	text-transform: none;
	font-weight: bold;
	overflow: visible;
}

@media (max-width: 1566px ) {
	.onboarding-fonts--header--headings {
		height: 40px;
	}
}

.onboarding-fonts--header--body {
	flex: 2;
	color: #333333;
	font-size: 16px;
	text-transform: none;
	font-weight: bold;
}

.onboarding-fonts--list {
}

.onboarding-fonts--font {
	display: flex;
	align-items: center;
	padding: 40px 0;
	/*border-bottom: 2px solid #ccc; */
	color: #333333;
}

.onboarding-fonts--font_active {
	background-color: #addeff;
}

.onboarding-fonts--font--heading {
	flex: 1;
	font-size: 28px;
	font-weight: 600;
	padding-left: 60px;
}

.onboarding-fonts--font--body {
	flex: 2;
	font-size: 18px;
}

.onboarding-fonts--font--button {
	padding-right: 60px;
}

.onboarding-fonts--font--button button {
	padding: 0;
	background: none;
	margin: 0;
	color: #333;
}

.close-buttons {
	display: flex;
	align-items: center;
	width: 50%;
	margin: 0 auto;
}

.close-buttons .close-button {
	flex: 1;
	align-items: center;
	text-align: center;
}

